# mdma-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mdma/: __init__.py  block_parser.py  errors.py  evaluator.py  expr_parser.py  file_parser.py  filters.py  inputs.py  model.py  output.py  renderer.py  schema.py  template_ast.py  util.py
tests/: conftest.py  test_comments.py  test_control_flow.py  test_errors.py  test_examples_files.py  test_filters.py  test_inputs.py  test_output.py  test_spec_example.py
