[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-mdma"
version = "0.3.0"
description = "Typed Markdown templating: render one or more Markdown strings from an .mdma template and an inputs object."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Théo Renard" }]
keywords = ["markdown", "template", "templating", "codegen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/Dastfox/mdma-python"
Repository = "https://github.com/Dastfox/mdma-python"
Issues = "https://github.com/Dastfox/mdma-python/issues"
Specification = "https://dastfox.github.io/mdma/"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["mdma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
